[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2.9",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.11",
]

[tool.ruff]
indent-width = 2
line-length = 120

exclude = [".venv"]

[tool.ruff.lint]
ignore = [
  "F401", # Unused import
  "E701", # Multiple statements on one line
  "TD003", # Missing issue link
  "ANN401", # Any type annotation
  "T201", # Print statement
]

select = [
  "I", # isort
  "E", "W", # pycodestyle
  "F", # pyflakes
  "B", # flakes8-bugbear
  "TD", # flake8-todo
  "DJ", # flake8-django
  "DTZ", # flake8-datetimez
  "T20", # flake8-print # En un futuro
  "PYI", # flake8-pyi
  "ANN", # flake8-annotations
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
mypy_path = "."
python_version = "3.13"

strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = false

exclude = [
  ".*\\.venv",
  ".*\\.ruff_cache",
  ".*\\.mypy_cache",
]
